package org.example.bank_po.exceptions;

public class BankException {
}
