package org.example.bank_po.interfaces;

public interface Asset {
    public double getValue();
}
